--- a/GenSys/Web.config
+++ b/GenSys/Web.config
@@ -24,8 +24,12 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5.2" >
+      <assemblies>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
