--- a/GenSys/Web.config
+++ b/GenSys/Web.config
@@ -25,7 +25,7 @@
   -->
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5.2" >
+    <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
@@ -116,5 +116,4 @@
       <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
-  <connectionStrings><add name="gensysEntities" connectionString="metadata=res://*/MySQL.Model1.csdl|res://*/MySQL.Model1.ssdl|res://*/MySQL.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.108.64.170;user id=xingchen;password=123456Abc!;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-</configuration>
+<connectionStrings><add name="gensysEntities" connectionString="metadata=res://*/MySQL.Model1.csdl|res://*/MySQL.Model1.ssdl|res://*/MySQL.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.108.64.170;password=123456Abc!;user id=xingchen;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
