--- a/GenSys/GenSys.csproj
+++ b/GenSys/GenSys.csproj
@@ -294,6 +294,7 @@
     <Compile Include="Models\SysUser.cs" />
     <Compile Include="Models\SysUserGuns.cs" />
     <Compile Include="Models\TokenGenerator.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="MySQL\alarm.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -425,6 +426,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ClassDiagram1.cd" />
+    <Content Include="Views\SystemConfig\TestAajaLoginViewResult.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
