--- a/GenSys/packages.config
+++ b/GenSys/packages.config
@@ -2,11 +2,11 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net45" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.2" targetFramework="net452" />
@@ -39,16 +40,16 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="MySql.Data" version="6.10.8" targetFramework="net452" />
+  <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net452" />
   <package id="MySqlConnector" version="0.19.2" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Pomelo.EntityFrameworkCore.MySql" version="1.1.2" targetFramework="net452" />
   <package id="Pomelo.EntityFrameworkCore.MySql.Design" version="1.1.2" targetFramework="net452" />
   <package id="Pomelo.JsonObject" version="1.1.1" targetFramework="net452" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net452" />
-  <package id="MySql.Data" version="6.10.8" targetFramework="net452" />
-  <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="System.Buffers" version="4.0.0" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
