--- a/GenSys/Web.config
+++ b/GenSys/Web.config
@@ -109,6 +109,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
       </provider></providers>
+    
   </entityFramework>
   <system.data>
     <DbProviderFactories>
@@ -116,4 +117,4 @@
       <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
-</connectionStrings></configuration>
+<connectionStrings><add name="gensysEntities" connectionString="metadata=res://*/Models.GensysModel.csdl|res://*/Models.GensysModel.ssdl|res://*/Models.GensysModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;password=123456Abc!;server=10.108.64.170;user id=xingchen;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
