--- a/GenSys/Web.config
+++ b/GenSys/Web.config
@@ -7,13 +7,6 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
-    <add name="gensysContext" connectionString="server=10.108.64.170;user id=xingchen;persistsecurityinfo=True;database=gensys" providerName=".NET Framework Data Provider for MySQL" />
-    <add name="gensysEntities" connectionString="metadata=res://*/Models.GensysModel.csdl|res://*/Models.GensysModel.ssdl|res://*/Models.GensysModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.108.64.170;user id=xingchen;password=123456Abc!;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
@@ -32,7 +25,7 @@
   -->
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5.2" >
+    <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
@@ -114,8 +107,10 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      </provider>
+    </providers>
+
   </entityFramework>
   <system.data>
     <DbProviderFactories>
@@ -123,16 +118,7 @@
       <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
-  <connectionStrings><add name="gensysEntities" connectionString="metadata=res://*/MySQL.Model1.csdl|res://*/MySQL.Model1.ssdl|res://*/MySQL.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.108.64.170;user id=xingchen;password=123456Abc!;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
-  </entityFramework>
+  <connectionStrings>
+    <add name="gensysEntities" connectionString="metadata=res://*/Models.GensysModel.csdl|res://*/Models.GensysModel.ssdl|res://*/Models.GensysModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;password=123456Abc!;server=10.108.64.170;user id=xingchen;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
