--- a/GenSys/Views/Web.config
+++ b/GenSys/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="AspDotNetMVCBootstrapTable" />
+        <add namespace="GenSys" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
