--- a/GenSys/GenSys.csproj
+++ b/GenSys/GenSys.csproj
@@ -321,12 +321,15 @@
     <Content Include="Views\UserMana\Index.cshtml" />
     <Content Include="Views\Ticket\Index.cshtml" />
     <Content Include="Views\DeviceMana\Index.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\dev_dict\Create.cshtml" />
     <Content Include="Views\dev_dict\Delete.cshtml" />
     <Content Include="Views\dev_dict\Details.cshtml" />
     <Content Include="Views\dev_dict\Edit.cshtml" />
     <Content Include="Views\dev_dict\Index.cshtml" />
+    <Content Include="Source\alarm.json" />
+    <Content Include="Source\genbox.json" />
+    <Content Include="Source\ipcam.json" />
+    <Content Include="Views\Home\login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
