--- a/GenSys/GenSys.csproj
+++ b/GenSys/GenSys.csproj
@@ -172,6 +172,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GensysModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\site.cs">
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
