--- a/GenSys/GenSys.csproj
+++ b/GenSys/GenSys.csproj
@@ -282,9 +282,6 @@
     <Compile Include="Models\alarm.cs">
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\C__EFMigrationsHistory.cs">
-      <DependentUpon>GensysModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\device.cs">
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
@@ -309,6 +306,7 @@
     <Compile Include="Models\site.cs">
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\STU.cs" />
     <Compile Include="Models\sys_dept.cs">
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
@@ -316,6 +314,9 @@
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sys_link.cs">
+      <DependentUpon>GensysModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sys_log.cs">
       <DependentUpon>GensysModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sys_login_log.cs">
@@ -413,6 +414,10 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ClassDiagram1.cd" />
     <Content Include="Views\SystemConfig\TestAajaLoginViewResult.cshtml" />
+    <Content Include="Views\SystemConfig\DeviceSettable.cshtml" />
+    <Content Include="Views\SystemConfig\_PartialPage1.cshtml" />
+    <Content Include="Views\SystemConfig\Indexbackup.cshtml" />
+    <Content Include="Views\SystemConfig\Permission.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
