--- a/GenSys/Web.config
+++ b/GenSys/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="gensysContext" connectionString="server=10.108.64.170;user id=xingchen;persistsecurityinfo=True;database=gensys" providerName=".NET Framework Data Provider for MySQL" />
-    <add name="gensysEntities" connectionString="metadata=res://*/Models.GensysModel.csdl|res://*/Models.GensysModel.ssdl|res://*/Models.GensysModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.108.64.170;user id=xingchen;password=123456Abc!;persistsecurityinfo=True;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <!--  <add name="gensysContext" connectionString="server=10.108.64.170;user id=xingchen;persistsecurityinfo=True;Charset=utf8;database=gensys" providerName=".NET Framework Data Provider for MySQL" />-->
+    <add name="gensysEntities" connectionString="metadata=res://*/Models.GensysModel.csdl|res://*/Models.GensysModel.ssdl|res://*/Models.GensysModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=566711;persistsecurityinfo=True;Charset=utf8;database=gensys&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -65,7 +65,7 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </providers>
   </entityFramework>
 </configuration>
